Added: Testimonials section.

--- a/src/assetes/stylesheets/_header.scss
+++ b/src/assetes/stylesheets/_header.scss
@@ -24,8 +24,9 @@
 
 .header-new {
   padding-left: 0px;
-  margin-left: -5px;
-  margin-top: -1px;
+  // margin-left: -5px;
+  // margin-top: -1px;
+  margin-top: -12px;
 }
 
 .josh-navbar {
