Added: Domain experties section.
- TODO: Removed JoshInNews and JoshPublicaations.

--- a/src/assetes/stylesheets/pages/_home.scss
+++ b/src/assetes/stylesheets/pages/_home.scss
@@ -531,3 +531,16 @@
   width: 10px;
   background-color: red;
 }
+
+.company-details {
+  position: relative;
+  top: 55%;
+}
+
+.pull-right {
+  float: right;
+}
+
+.pb-14{
+  padding-bottom: 14px;
+}
