--- a/src/assetes/stylesheets/main.css
+++ b/src/assetes/stylesheets/main.css
@@ -6425,6 +6425,16 @@ img {
   width: 10px;
   background-color: red; }
 
+.company-details {
+  position: relative;
+  top: 55%; }
+
+.pull-right {
+  float: right; }
+
+.pb-14 {
+  padding-bottom: 14px; }
+
 .section-technologies.section-banner {
   position: relative;
   background-color: #495380;
