--- a/src/assetes/stylesheets/pages/_home.scss
+++ b/src/assetes/stylesheets/pages/_home.scss
@@ -544,3 +544,14 @@
 .pb-14{
   padding-bottom: 14px;
 }
+
+.border-2{
+  border: 2px solid;
+  border-color: #FFFFFF;
+  width: 300px;
+  height: 211px;
+}
+
+.bg-white {
+  background-color: #FFFFFF;
+}
