--- a/src/assetes/stylesheets/main.css
+++ b/src/assetes/stylesheets/main.css
@@ -5372,11 +5372,12 @@ a.text-gray:hover, a.text-gray:focus {
       .josh-navbar .navbar-toggler:not(:disabled):not(.disabled) {
         font-size: 1.5rem; } }
   .josh-navbar .navbar-nav .nav-link {
-    color: #999999;
+    color: #FFFFFF;
     font-size: 0.875rem;
     font-weight: 300;
     text-transform: uppercase;
-    padding: 0.3125rem 0.9375rem; }
+    padding: 0.3125rem 0.9375rem;
+    font-family: Barlow, regular; }
     @media (max-width: 991.98px) {
       .josh-navbar .navbar-nav .nav-link {
         font-size: 1.125rem;
@@ -5385,9 +5386,6 @@ a.text-gray:hover, a.text-gray:focus {
     .josh-navbar .navbar-nav .nav-link.active {
       color: #333333;
       font-weight: 700; }
-    .josh-navbar .navbar-nav .nav-link:hover, .josh-navbar .navbar-nav .nav-link:focus {
-      color: #333333;
-      outline: 0; }
   .josh-navbar .navbar-nav .nav-offcanvas-link {
     display: none; }
     @media (max-width: 991.98px) {
@@ -6434,6 +6432,15 @@ img {
 
 .pb-14 {
   padding-bottom: 14px; }
+
+.border-2 {
+  border: 2px solid;
+  border-color: #FFFFFF;
+  width: 300px;
+  height: 211px; }
+
+.bg-white {
+  background-color: #FFFFFF; }
 
 .section-technologies.section-banner {
   position: relative;
