--- a/src/assetes/stylesheets/main.css
+++ b/src/assetes/stylesheets/main.css
@@ -5342,8 +5342,7 @@ a.text-gray:hover, a.text-gray:focus {
   -ms-flex-align: center;
   -webkit-align-items: center;
   -moz-align-items: center;
-  align-items: center;
-  box-shadow: 0px 0px 69px -23px rgba(0, 0, 0, 0.75); }
+  align-items: center; }
   @media (max-width: 991.98px) {
     .josh-header {
       height: 3.375rem; } }
