--- a/src/assetes/stylesheets/main.css
+++ b/src/assetes/stylesheets/main.css
@@ -6416,11 +6416,6 @@ img {
   background-attachment: fixed;
   background-size: cover; }
 
-.slick-dots li {
-  height: 10px;
-  width: 10px;
-  background-color: red; }
-
 .company-details {
   position: relative;
   top: 55%; }
@@ -6461,6 +6456,13 @@ img {
       color: #333333; }
       .bullet li:hover, a:hover {
         color: #333333; } }
+
+.width-adjust {
+  width: 92px !important;
+  border-radius: 15px 15px 15px 15px; }
+
+.height-adjust {
+  height: 400px; }
 
 .section-technologies.section-banner {
   position: relative;
