--- a/src/assetes/stylesheets/pages/_home.scss
+++ b/src/assetes/stylesheets/pages/_home.scss
@@ -595,3 +595,14 @@
 .height-adjust {
   height: 400px;
 }
+
+.border-radius {
+  border-radius: 22px 22px 22px 22px;
+  width: 120px;
+}
+
+.contact-us-btn {
+  background-image: url("../images/contact_us_btn.png");
+  width: 105px;
+  height: 32px;
+}
