Added: what we do setion in the home page.

--- a/src/assetes/stylesheets/pages/_home.scss
+++ b/src/assetes/stylesheets/pages/_home.scss
@@ -550,6 +550,7 @@
   border-color: #FFFFFF;
   width: 300px;
   height: 211px;
+  border-radius: 16px 16px 16px 16px;
 }
 
 .bg-white {
@@ -635,4 +636,8 @@
 
 .height-100{
   height: 100px;
+}
+
+.h-52 {
+  height: 52%;
 }
