--- a/src/assetes/stylesheets/main.css
+++ b/src/assetes/stylesheets/main.css
@@ -6430,7 +6430,8 @@ img {
   border: 2px solid;
   border-color: #FFFFFF;
   width: 300px;
-  height: 211px; }
+  height: 211px;
+  border-radius: 16px 16px 16px 16px; }
 
 .bg-white {
   background-color: #FFFFFF; }
@@ -6496,6 +6497,9 @@ img {
 
 .height-100 {
   height: 100px; }
+
+.h-52 {
+  height: 52%; }
 
 .section-technologies.section-banner {
   position: relative;
