--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -715,3 +715,11 @@
 .bottom-30 {
   bottom: 30px !important;
 }
+
+.main-container {
+  height:  67px;
+
+  @include media-breakpoint-down(sm) {
+    height: 47px;
+  }
+}
