Removed: box-shadow from clients list.

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -318,7 +318,7 @@
       @extend .justify-content-center;
       @extend .align-items-center;
       background-color: $white;
-      box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
+      // box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
     }
   }
 }
