Added: domainExperties section

--- a/src/assets/stylesheets/_header.scss
+++ b/src/assets/stylesheets/_header.scss
@@ -3,7 +3,7 @@
   background-color: #FFF;
   @include flexbox();
   @include align-items(center);
-  // box-shadow: 0px 0px 69px -23px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 69px -23px rgba(0,0,0,0.75);
 
   @include media-breakpoint-down(md) {
     height: rem(54px);
