Fixed: fonts and content for domain experties page.

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -735,3 +735,13 @@
 .align-self-center {
   align-self: center;
 }
+
+.text-orange {
+  color: #CF4338;
+  font-size: 13px;
+}
+
+.text-black{
+  color: #03232D;
+  font-size: 10px;
+}
