--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -747,3 +747,41 @@
   color: #03232D;
   font-size: 10px;
 }
+
+.ellipsis {
+  overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 6; /* number of lines to show */
+   line-height: 20px;        /* fallback */
+   max-height: 100px;
+}
+
+
+
+.read-more {
+  button {
+    background-color: #FFFFFF;
+    float: right;
+    margin-top: 14px;
+    height: 30px;
+    position: relative;
+    bottom: 5px;
+    width: 92px;
+    width: 92px;
+    border-radius: 15px 15px 15px 15px;
+  }
+  span {
+    font-size: 9px;
+    position: relative;
+    bottom: 5px;
+  }
+  
+  
+  .btn-secondary {
+    // display: none;
+    background-color: transparent;
+    
+  }
+}
