Removed 2 photos and added US office address

--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -60,7 +60,7 @@ block content
       .contactus-footer
         .address-wrap
           .row
-            .col-sm-4
+            .col-sm-3
               .address
                 i.icon-location
                 p.mb-0 JOSH SOFTWARE PVT. LTD.
@@ -72,7 +72,19 @@ block content
                   |Bavdhan, Pune, 
                   br
                   |Maharashtra 411021
-            .col-sm-8
+            .col-sm-3
+              .address
+                i.icon-location
+                p.mb-0.text_pos
+                  |US Office
+                p.mb-0 JOSH SOFTWARE INC.
+                  br
+                  |7300 Lone Star Drive
+                  br
+                  |Suite C200
+                  br
+                  |Plano, TX 75024
+            .col-sm-6
               ul.list-inline.list-contact
                 li.contact
                   i.icon-phone
