[#167991893] Fixed: assets loaded from new.joshsoftware.com.

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 /* variables */
 
 // Assets URL
-$assets_url: "http://new.joshsoftware.com:8080/";
+$assets_url: "../";
 
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
