Add color and font-size to testimony

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -773,6 +773,8 @@
    -webkit-line-clamp: 6; /* number of lines to show */
    padding-left: 1rem;
    padding-right: 1rem;
+   color: #000;
+   font-size: 0.9em;
 }
 
 
