Add Gopher Guides to home page

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -866,3 +866,19 @@
   max-width: 100%;
   height: auto;
 }
+
+.top-2 {
+  top: -2%;
+}
+
+.top-4 {
+  top: -4%;
+}
+
+.gopher-guide {
+  color: #CF4338;
+
+  .close {
+    color: #CF4338;
+  }
+}
