--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,50 +1,47 @@
 .leader-img {
   /* start of desktop styles */
-  width: 349.98px;
-  height: 237px;
+  min-width: 300px;
+  max-width: 300px;
+  min-height: 237px;
+  max-height: 237px;
 
   @media screen and (max-width: 991px) {
-    /* start of large tablet styles */
-    width: 240px;
-    height: 160px;
-  }
-
-  @media screen and (max-width: 767px) {
-    /* start of medium tablet styles */
-    width: 240px;
-    height: 160px;
+    /* start of tablet styles */
+    min-width: 200px;
+    max-width: 200px;
+    min-height: 160px;
+    max-height: 160px;
   }
 
   @media screen and (max-width: 479px) {
     /* start of phone styles */
-    width: 345px;
-    height: 230px;
+    min-width: 345px;
+    max-width: 345px;
+    min-height: 230px;
+    max-height: 230px;
   }
 }
 
 .nerd-img {
-    /* start of desktop styles */
-    width: 255px;
-    height: 238.85px;
-    
-    // @media screen and (max-width: 991px) {
-    //     /* start of large tablet styles */
-    //     width: 240px;
-    //     height: 160px;
-    //   }
-    
-    //   @media screen and (max-width: 767px) {
-    //     /* start of medium tablet styles */
-    //     width: 240px;
-    //     height: 160px;
-    //   }
-    
-      @media screen and (max-width: 479px) {
-        /* start of phone styles */
-        min-width: 157.5px;
-        max-width: 157.5px;
-        height: 147.51px;
-      }
+  /* start of desktop styles */
+  min-width: 220px;
+  max-width: 220px;
+  min-height: 220px;
+  max-height: 220px;
 
-    
+  @media screen and (max-width: 991px) {
+    /* start of tablet styles */
+    min-width: 149.98px;
+    max-width: 149.98px;
+    min-height: 140.48px;
+    max-height: 140.48px;
+  }
+
+  @media screen and (max-width: 479px) {
+    /* start of phone styles */
+    min-width: 157.5px;
+    max-width: 157.5px;
+    min-height: 147.51px;
+    max-height: 147.51px;
+  }
 }
